Added play activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         </activity>
         <activity
             android:name=".ScoreActivity"
-            android:label="Score"></activity>
+            android:label="Score" />
+        <activity
+            android:name=".PlayActivity"
+            android:label="Play"></activity>
     </application>
 
 </manifest>
